k8s/madrid/prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-dep
  namespace: madrid-p5
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        args:
          - "--config.file=/etc/prometheus/prom.yml"
          - "--storage.tsdb.path=/prometheus/"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-server-conf

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: madrid-p5
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 20000       # Puerto interno (para que Grafana lo vea)
      targetPort: 9090
      nodePort: 30009   # Puerto externo (uno nuevo para Madrid)
